# neat-monroe

./: .gitignore  README.md
client-http-get/: CMakeLists.txt
dwnl-test/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  dwnl-test.cpp  logger.cpp  neat-dwnl-test.cpp  version.h
metadata-exporter/files/systemd/: neat-metadata-exporter.service  nne-lxc-network-manager.service  postinst  prerm
metadata-exporter/src/: CMakeLists.txt  DebConf.cmake  clock_info.cpp  main.cpp  mqdaemon.cpp  mqdaemon.h  mqloop.cpp  mqloop.h  neat_writer.cpp  neat_writer.h
monroe-experiments/neat-base/: neat-base.docker  push.sh  readme.md
monroe-experiments/neat-benefits/: benefits-gain.sql  dwnl-test.sql  metadata.sql  neat-benefits.conf  neat-benefits.docker  process-benefits.py  push.sh  select-modes.sql  tcp-ping.sql
monroe-experiments/neat-benefits/configs/: local-performance-neat.conf  local-performance-non-neat.conf  monroe-performance-day-1.conf  monroe-performance-day-2.conf  neat-benefits.conf
monroe-experiments/neat-benefits/db/: dwnl-test-avg.sql  experiment.sql  metadata.sql  process-benefits.py  stats-per-node.sql  stats.sql  tcp-ping-avg.sql  v_metatata.sql  v_tool_avg.sql
monroe-experiments/neat-benefits/db/test-1/: benefits-by-iface.sql  benefits-by-mode.sql  benefits-performance.sql
monroe-experiments/neat-benefits/files/: dwnl-test_1.0.1_amd64.deb  dwnl-test_1.0.2_amd64.deb  dwnl-test_1.0.5_amd64.deb  neat-benefits.sh  neat-metadata-exporter_1.1.3_amd64.deb  neat-metadata-exporter_1.1.4_amd64.deb  neat-metadata-exporter_1.1.5_amd64.deb  tcp-ping_1.0.0_amd64.deb  tcp-ping_1.0.1_amd64.deb  tcp-ping_1.0.2_amd64.deb  tcp-ping_1.0.5_amd64.deb
monroe-experiments/neat-benefits/files/policies/: device_mode.policy  dlb_quality.policy  force_mobile.profile  frequency.policy  signal_strenght.policy  signal_strenght_lte.policy  signal_strenght_lte_fair.policy  signal_strenght_lte_good.policy
monroe-experiments/neat-benefits/results/: 20180313-2143-local-performance-non-neat.tar.bz2  20180313-2156-local-performance-neat.tar.bz2  neat-benefits-20180312-0731.tar
monroe-experiments/neat-build/: neat-build.docker  push.sh  readme.md
monroe-experiments/neat-build/files/: build-package.sh
monroe-experiments/neat-penalty/: measure-penalty.py  neat-penalty.docker  penalty-stats.py  push.sh  readme.md
monroe-experiments/neat-penalty/configs/: local-penalty-neat.conf  local-penalty-non-neat.conf
monroe-experiments/neat-penalty/files/: dwnl-test_1.0.3_amd64.deb  neat-penalty.sh  tcp-ping_1.0.3_amd64.deb
monroe-experiments/neat-proxy/: neat-proxy.docker  orig-neat_test.docker  push.sh
monroe-experiments/neat-proxy/configs/: neat-proxy.conf
monroe-experiments/neat-proxy/files/: dwnl-test_1.0.0_amd64.deb  neat-metadata-exporter_1.0.3_amd64.deb  neat-metadata-exporter_1.1.1_amd64.deb  neat-proxy.sh  neat-proxy_1.0.2_amd64.deb  neat-proxy_1.0.3_amd64.deb  pmtest_1.0.2_amd64.deb
monroe-experiments/neat-proxy/files/policies/: force_eth0.profile
monroe-experiments/neat-test/: neat-test.docker  push.sh  readme.md
monroe-experiments/neat-test/files/: neat-http-get_1.0.0_amd64.deb  neat-test.sh
monroe-experiments/neat_test/: neat_test.docker  push.sh
monroe-experiments/neat_test/files/: myscript.sh  neat-http-get_1.0.0_amd64.deb  neat-metadata-exporter  neat_experiment.sh
neat-http-get/: CMakeLists.txt
neat-proxy/: CMakeLists.txt  main.cpp
neat-proxy/files/: start-neat-proxy.sh  stop-neat-proxy.sh
pmtest/: CMakeLists.txt  main.cpp  mptcp.prop  tcp.prop
tcp-ping/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  logger.h  neat-tcp-ping.cpp  tcp-ping.cpp  version.h
